--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
   "name": "line-pm",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "@line/bot-sdk": "^10.0.0",
-    "@notionhq/client": "^3.1.3",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^4.18.2",
+    "dotenv": "^16.0.3",
+    "line-bot-sdk": "^7.5.0"
   }
 }
