--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@google/generative-ai": "^0.24.1",
+    "@line/bot-sdk": "^10.0.0",
     "dotenv": "^16.0.3",
-    "@line/bot-sdk": "^10.0.0"
+    "express": "^4.18.2"
   }
 }
