--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@line/bot-sdk": "^10.0.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "@notionhq/client": "^3.1.3",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "line-bot-sdk": "^0.1.4"
   }
 }
