--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@line/bot-sdk": "^10.0.0",
     "@notionhq/client": "^3.1.3",
     "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "line-bot-sdk": "^0.1.4"
+    "express": "^4.21.2"
   }
 }
