--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "background-processing"
   ],
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "@line/bot-sdk": "^10.0.0",
-    "@notionhq/client": "^3.1.3",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2"
+  "@google/genai": "^1.4.0",
+  "@line/bot-sdk": "^10.0.0",
+  "@notionhq/client": "^3.1.3",
+  "dotenv": "^16.5.0",
+  "express": "^4.21.2"
   },
   "engines": {
     "node": ">=18.0.0"
