--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "background-processing"
   ],
   "dependencies": {
-  "@google/genai": "^1.4.0",
-  "@line/bot-sdk": "^9.9.0"
-  "@notionhq/client": "^3.1.3",
-  "dotenv": "^16.5.0",
-  "express": "^4.21.2"
-  "helmet": "^7.1.0",
-  "joi": "^17.11.0",
-  "winston": "^3.11.0"
+    "@google/genai": "^1.4.0",
+    "@line/bot-sdk": "^9.9.0",
+    "@notionhq/client": "^3.1.3",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "winston": "^3.11.0"
   },
   "engines": {
     "node": ">=18.0.0"
