--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "background-processing"
   ],
   "dependencies": {
-    "@google/genai": "^1.4.0",
+    "@google/generative-ai": "^0.21.0",
     "@line/bot-sdk": "^9.9.0",
     "@notionhq/client": "^3.1.3",
     "dotenv": "^16.5.0",
